# atom

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build.yml  clippy.yml  coverage.yml  rust.yml
src/: category.rs  content.rs  entry.rs  error.rs  feed.rs  fromxml.rs  generator.rs  lib.rs  link.rs  person.rs  source.rs  text.rs  toxml.rs  util.rs
src/extension/: mod.rs  util.rs
tests/: builders.rs  content.rs  read.rs  text.rs  write.rs
tests/data/: category.xml  content_src.xml  content_text_cdata.xml  content_text_cdata_escaped.xml  content_text_html.xml  content_text_html_common.xml  content_text_other.xml  content_text_plain.xml  content_text_plain_escaped.xml  content_text_xhtml.xml  entry_with_non_standard_dates.xml  extension.xml  generator.xml  link.xml  person.xml  read_entry.xml  read_feed.xml  read_person.xml  source.xml  text_cdata.xml  text_cdata_escaped.xml  text_empty.xml  text_html.xml  text_plain.xml  text_plain_escaped.xml  text_xhtml.xml  text_xhtml_escaped.xml
