[package]
name = "atom_syndication"
version = "0.8.0"
authors = ["James Hurst <jh.jameshurst@gmail.com>"]
edition = "2018"
description = "Library for serializing the Atom web content syndication format"
repository = "https://github.com/rust-syndication/atom"
documentation = "https://docs.rs/atom_syndication/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["atom", "feed", "parser", "parsing"]
categories = ["parser-implementations"]
include = ["src/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
quick-xml = { version = "0.17", features = ["encoding"] }
derive_builder = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
chrono = "0.4"

[features]
default = ["builders"]
builders = ["derive_builder"]
with-serde = ["serde", "chrono/serde"]
