[package]
name = "atom_syndication"
version = "0.12.3"
authors = ["James Hurst <jh.jameshurst@gmail.com>"]
edition = "2021"
description = "Library for serializing the Atom web content syndication format"
repository = "https://github.com/rust-syndication/atom"
documentation = "https://docs.rs/atom_syndication/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["atom", "feed", "parser", "parsing"]
categories = ["parser-implementations"]
include = ["src/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
diligent-date-parser = "0.1.3"
quick-xml = { version = "0.36", features = ["encoding"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
derive_builder = { version = "0.20", optional = true }
never = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["builders"]
builders = ["derive_builder", "never"]
with-serde = ["serde", "chrono/serde"]
